--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width initial-scale=1.0'>
   <title>Scrooble</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="/style.css" />
 
   <script defer src="/bundle.js"></script>
